--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Extension</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      width: 200px;
+      text-align: center;
+      padding: 20px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h2>Hello!</h2>
+  <button id="myButton">Click me</button>
+  <script src="popup.js"></script>
+</body>
+</html>
